--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,20 @@
 <body>
     <div class="container">
         <header>
-            <h1>اختبار الرابط</h1>
-            <p>أدخل الرابط الذي ترغب في فحصه</p>
+            <h1>اختبار الرابط أو الملف</h1>
+            <p>أدخل الرابط أو قم برفع الملف الذي ترغب في فحصه</p>
         </header>
 
         <div class="scan-box">
             <h2>ابدأ الفحص الآن</h2>
-            <form id="scan-form">
+            <form id="scan-form" enctype="multipart/form-data">
                 <div class="input-group">
                     <label for="url">أدخل الرابط:</label>
                     <input type="text" id="url" placeholder="أدخل الرابط هنا" required>
+                </div>
+                <div class="input-group">
+                    <label for="file-upload">أو قم بتحميل الملف:</label>
+                    <input type="file" id="file-upload">
                 </div>
                 <button type="submit">
                     <i class="fas fa-search"></i> ابدأ الفحص
