تحديث الواجهة أو إضافة صفحة index

--- a/public/index.html
+++ b/public/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>اختبار الروابط والملفات</title>
+    <title>اافترض الاختراق</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="style.css"> <!-- تأكد من ربط ملف CSS -->
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>اختبار الرابط أو الملف</h1>
-            <p>أدخل الرابط أو قم برفع الملف الذي ترغب في فحصه</p>
+            <h1>افترض الاختراق</h1>
+            <p>لبناء دفاع استباقي وفعّال</p>
         </header>
 
         <div class="scan-box">
-            <h2>ابدأ الفحص الآن</h2>
+            <h2>ادخل الرابط أو قم برفع الملف الذي ترغب في فحصه</h2>
             <form id="scan-form" enctype="multipart/form-data">
                 <div class="input-group">
                     <label for="url">أدخل الرابط:</label>
@@ -43,7 +43,7 @@
         </div>
 
         <footer>
-            <p>&copy; 2025 جميع الحقوق محفوظة</p>
+            <p>&copy; 2025سِهام</p>
         </footer>
     </div>
 
