--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <title>اافترض الاختراق</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="style.css"> <!-- تأكد من ربط ملف CSS -->
+        <!-- تحميل مكتبة axios -->
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
     <div class="container">
