--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>اافترض الاختراق</title>
+    <title>افترض الاختراق</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="style.css"> <!-- تأكد من ربط ملف CSS -->
-        <!-- تحميل مكتبة axios -->
-        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-        <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600&family=Tajawal:wght@300;400;600&display=swap" rel="stylesheet">
-
+    <!-- تحميل مكتبة axios -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600&family=Tajawal:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -47,7 +46,7 @@
         </div>
 
         <footer>
-            <p>&copy; 2025سِهام</p>
+            <p>&copy; Seham Bahes 2025</p>
         </footer>
     </div>
 
