--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
     <!-- تحميل مكتبة axios -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600&family=Tajawal:wght@300;400;600&display=swap" rel="stylesheet">
+    <img src="https://www.micromindercs.com/ui/assets/image/topcs_riyadh_6.webp" alt="صورة من Microminder Cyber Security" width="600" />
+
 </head>
 <body>
     <div class="container">
