--- a/public/index.html
+++ b/public/index.html
@@ -18,30 +18,37 @@
       background-position: center;
       background-attachment: fixed;
       color: #fff;
+      height: 100vh; /* ضمان أن الخلفية تملأ الشاشة */
     }
 
     .container {
       background-color: rgba(0, 0, 0, 0.6);
-      min-height: 100vh;
+      height: 100%; /* جعل الحاوية تغطي كامل الشاشة */
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
       padding: 20px;
     }
 
     header, footer, h1, h2, p, label {
       color: #fff;
-      text-align: center;
+      margin-bottom: 10px;
     }
 
     .scan-box {
       max-width: 600px;
-      margin: 0 auto;
+      width: 100%;
       padding: 20px;
-      background-color: rgba(255, 255, 255, 0.1);
+      background-color: rgba(255, 255, 255, 0.2);
       border-radius: 10px;
+      text-align: center;
     }
 
     .input-group {
       margin-bottom: 15px;
-      text-align: right;
+      text-align: center;
     }
 
     input[type="text"], input[type="file"] {
@@ -87,7 +94,7 @@
     #result-box {
       display: none;
       margin-top: 20px;
-      text-align: right;
+      text-align: center;
     }
 
     .hidden {
