--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>افترض الاختراق</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600&family=Tajawal:wght@300;400;600&display=swap" rel="stylesheet" />
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600&family=Tajawal:wght@400;600&display=swap" rel="stylesheet" />
   <style>
     body {
       margin: 0;
@@ -14,7 +13,6 @@
       font-family: 'Tajawal', sans-serif;
       background-image: url('https://www.micromindercs.com/ui/assets/image/topcs_riyadh_6.webp');
       background-size: cover;
-      background-repeat: no-repeat;
       background-position: center;
       background-attachment: fixed;
       color: #fff;
@@ -28,58 +26,66 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      text-align: center;
-      padding: 20px;
+      padding: 30px;
+      box-sizing: border-box;
     }
 
-    header, footer, h1, h2, p, label {
-      color: #fff;
+    .scan-box {
+      background-color: rgba(255, 255, 255, 0.1);
+      padding: 40px 30px;
+      border-radius: 20px;
+      width: 100%;
+      max-width: 500px;
+      text-align: center;
+      box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
+    }
+
+    h1 {
+      font-size: 2rem;
       margin-bottom: 10px;
       font-family: 'Cairo', sans-serif;
     }
 
-    .scan-box {
-      max-width: 600px;
-      width: 100%;
-      padding: 20px;
-      background-color: rgba(255, 255, 255, 0.1);
-      border-radius: 15px;
-      text-align: center;
-      box-shadow: 0 0 20px rgba(0,0,0,0.4);
+    h2 {
+      font-size: 1.2rem;
+      margin-bottom: 20px;
     }
 
-    .input-group {
+    label {
+      display: block;
+      text-align: right;
+      margin-bottom: 8px;
+      font-weight: 500;
+    }
+
+    input[type="text"],
+    .custom-file-label {
+      width: 100%;
+      padding: 14px;
+      border: none;
+      border-radius: 10px;
+      font-size: 1rem;
       margin-bottom: 20px;
-      text-align: center;
+      font-family: 'Cairo', sans-serif;
+      box-sizing: border-box;
     }
 
     input[type="text"] {
-      width: 100%;
-      padding: 12px;
-      border: none;
-      border-radius: 8px;
-      font-size: 1rem;
-      font-family: 'Cairo', sans-serif;
+      background: #fff;
+      color: #000;
     }
 
-    /* رفع الملف */
     .file-upload-wrapper {
       position: relative;
-      width: 100%;
-      text-align: center;
-      margin-top: 10px;
+      margin-bottom: 20px;
     }
 
     .custom-file-label {
-      display: inline-block;
-      padding: 12px 30px;
       background-color: #7b2cbf;
       color: white;
-      border-radius: 8px;
-      font-size: 1rem;
-      font-family: 'Cairo', sans-serif;
       cursor: pointer;
       transition: background-color 0.3s ease;
+      text-align: center;
     }
 
     .custom-file-label:hover {
@@ -93,15 +99,14 @@
     .submit-btn {
       background-color: #7b2cbf;
       color: white;
-      padding: 14px 20px;
+      padding: 14px;
+      width: 100%;
       border: none;
       border-radius: 10px;
       font-size: 1.2rem;
       font-family: 'Cairo', sans-serif;
       font-weight: bold;
       cursor: pointer;
-      width: 100%;
-      margin-top: 20px;
       transition: background-color 0.3s ease;
     }
 
@@ -115,6 +120,8 @@
       height: 10px;
       background-color: #ccc;
       margin-top: 20px;
+      border-radius: 10px;
+      overflow: hidden;
     }
 
     .progress {
@@ -133,11 +140,11 @@
     #result-box {
       display: none;
       margin-top: 20px;
-      text-align: center;
     }
 
     footer {
       margin-top: 40px;
+      color: #fff;
       font-family: 'Cairo', sans-serif;
     }
   </style>
@@ -196,13 +203,11 @@
       loadingBar.style.display = 'block';
       resultBox.style.display = 'none';
 
-      // Simulate scan delay
+      // محاكاة عملية الفحص
       setTimeout(() => {
         loadingBar.style.display = 'none';
         resultBox.style.display = 'block';
         resultContent.innerText = "تم الفحص بنجاح (محاكاة فقط)";
       }, 2000);
     });
-  </script>
-</body>
-</html>
+  </
