--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>افترض الاختراق</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600&family=Tajawal:wght@400;600&display=swap" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600&family=Tajawal:wght@300;400;600&display=swap" rel="stylesheet" />
   <style>
     body {
       margin: 0;
@@ -13,109 +14,60 @@
       font-family: 'Tajawal', sans-serif;
       background-image: url('https://www.micromindercs.com/ui/assets/image/topcs_riyadh_6.webp');
       background-size: cover;
+      background-repeat: no-repeat;
       background-position: center;
       background-attachment: fixed;
       color: #fff;
-      height: 100vh;
+      height: 100vh; /* ضمان أن الخلفية تملأ الشاشة */
     }
 
     .container {
       background-color: rgba(0, 0, 0, 0.6);
-      height: 100%;
+      height: 100%; /* جعل الحاوية تغطي كامل الشاشة */
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      padding: 30px;
-      box-sizing: border-box;
+      text-align: center;
+      padding: 20px;
+    }
+
+    header, footer, h1, h2, p, label {
+      color: #fff;
+      margin-bottom: 10px;
     }
 
     .scan-box {
-      background-color: rgba(255, 255, 255, 0.1);
-      padding: 40px 30px;
-      border-radius: 20px;
+      max-width: 600px;
       width: 100%;
-      max-width: 500px;
+      padding: 20px;
+      background-color: rgba(255, 255, 255, 0.2);
+      border-radius: 10px;
       text-align: center;
-      box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
-    }
-
-    h1 {
-      font-size: 2rem;
-      margin-bottom: 10px;
-      font-family: 'Cairo', sans-serif;
-    }
-
-    h2 {
-      font-size: 1.2rem;
-      margin-bottom: 20px;
-    }
-
-    label {
-      display: block;
-      text-align: center; /* توسيط النص */
-      margin-bottom: 8px;
-      font-weight: 500;
     }
 
     .input-group {
-      margin-bottom: 20px;
-    }
-
-    input[type="text"],
-    .custom-file-label {
-      width: 100%;
-      padding: 14px;
-      border: none;
-      border-radius: 10px;
-      font-size: 1rem;
-      font-family: 'Cairo', sans-serif;
-      box-sizing: border-box;
-    }
-
-    input[type="text"] {
-      background: #fff;
-      color: #000;
-    }
-
-    .file-upload-wrapper {
-      position: relative;
-      width: 100%;
-    }
-
-    .custom-file-label {
-      background-color: #7b2cbf;
-      color: white;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-      display: block;
+      margin-bottom: 15px;
       text-align: center;
     }
 
-    .custom-file-label:hover {
-      background-color: #9d4edd;
-    }
-
-    input[type="file"] {
-      display: none;
-    }
-
-    .submit-btn {
-      background-color: #7b2cbf;
-      color: white;
-      padding: 14px;
+    input[type="text"], input[type="file"] {
       width: 100%;
+      padding: 10px;
       border: none;
-      border-radius: 10px;
-      font-size: 1.2rem;
-      font-family: 'Cairo', sans-serif;
-      font-weight: bold;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
+      border-radius: 5px;
+      font-size: 1rem;
     }
 
-    .submit-btn:hover {
-      background-color: #9d4edd;
+    button {
+      background-color: #0d6efd;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      font-size: 1rem;
+      cursor: pointer;
+      width: 100%;
     }
 
     #loading-bar {
@@ -124,8 +76,6 @@
       height: 10px;
       background-color: #ccc;
       margin-top: 20px;
-      border-radius: 10px;
-      overflow: hidden;
     }
 
     .progress {
@@ -144,12 +94,27 @@
     #result-box {
       display: none;
       margin-top: 20px;
+      text-align: center;
+    }
+
+    .hidden {
+      display: none;
+    }
+
+    .stats-container {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+    }
+
+    .stat-item {
+      background-color: rgba(255, 255, 255, 0.2);
+      padding: 10px;
+      border-radius: 5px;
     }
 
     footer {
       margin-top: 40px;
-      color: #fff;
-      font-family: 'Cairo', sans-serif;
     }
   </style>
 </head>
@@ -165,18 +130,13 @@
       <form id="scan-form" enctype="multipart/form-data">
         <div class="input-group">
           <label for="url">أدخل الرابط:</label>
-          <input type="text" id="url" placeholder="أدخل الرابط هنا" />
+          <input type="text" id="url" placeholder="أدخل الرابط هنا" required />
         </div>
-
         <div class="input-group">
-          <label for="file-upload">أو قم بتحميل الملف</label>
-          <div class="file-upload-wrapper">
-            <label class="custom-file-label" for="file-upload">اختر الملف</label>
-            <input type="file" id="file-upload" />
-          </div>
+          <label for="file-upload">أو قم بتحميل الملف:</label>
+          <input type="file" id="file-upload" />
         </div>
-
-        <button type="submit" class="submit-btn">
+        <button type="submit">
           <i class="fas fa-search"></i> ابدأ الفحص
         </button>
       </form>
@@ -187,7 +147,7 @@
     </div>
 
     <div id="result-box">
-      <h2>نتيجة الفحص</h2>
+      <h2>نتيجة الفحص:</h2>
       <div id="result-content"></div>
     </div>
 
@@ -207,12 +167,44 @@
       loadingBar.style.display = 'block';
       resultBox.style.display = 'none';
 
-      // محاكاة عملية الفحص
-      setTimeout(() => {
+      const file = document.getElementById('file-upload').files[0];
+      const url = document.getElementById('url').value;
+
+      if (file) {
+        // إرسال الملف إلى الـ API للفحص
+        const formData = new FormData();
+        formData.append('file', file);
+
+        // استخدم API من فيروس توتال أو أي خدمة فحص أخرى
+        axios.post('API_URL_FOR_FILE_SCAN', formData, {
+          headers: {
+            'Content-Type': 'multipart/form-data',
+          },
+        }).then(response => {
+          loadingBar.style.display = 'none';
+          resultBox.style.display = 'block';
+          resultContent.innerText = response.data.result || "تم الفحص بنجاح!";
+        }).catch(error => {
+          loadingBar.style.display = 'none';
+          resultBox.style.display = 'block';
+          resultContent.innerText = "حدث خطأ أثناء الفحص.";
+        });
+      } else if (url) {
+        // إرسال الرابط إلى الـ API للفحص
+        axios.post('API_URL_FOR_URL_SCAN', { url: url }).then(response => {
+          loadingBar.style.display = 'none';
+          resultBox.style.display = 'block';
+          resultContent.innerText = response.data.result || "تم الفحص بنجاح!";
+        }).catch(error => {
+          loadingBar.style.display = 'none';
+          resultBox.style.display = 'block';
+          resultContent.innerText = "حدث خطأ أثناء الفحص.";
+        });
+      } else {
         loadingBar.style.display = 'none';
         resultBox.style.display = 'block';
-        resultContent.innerText = "تم الفحص بنجاح (محاكاة فقط)";
-      }, 2000);
+        resultContent.innerText = "يرجى إدخال رابط أو رفع ملف.";
+      }
     });
   </script>
 </body>
