--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
 
     .input-group {
       margin-bottom: 15px;
-      text-align: right;
+      text-align: center;
     }
 
     input[type="text"], input[type="file"] {
@@ -82,7 +82,7 @@
     .progress {
       width: 100%;
       height: 100%;
-      background-color: #0d6efd;
+      background-color: #589622;
       animation: loading 2s infinite;
     }
 
