تحديث الواجهة أو إضافة صفحة index

--- a/public/index.html
+++ b/public/index.html
@@ -44,13 +44,22 @@
       text-align: center;
     }
 
-    input[type="text"], input[type="file"] {
-      width: 100%;
-      padding: 10px;
-      border: none;
-      border-radius: 5px;
-      font-size: 1rem;
-    }
+    input[type="text"] {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  font-size: 1rem;
+}
+
+input[type="file"] {
+  display: block;
+  margin: 0 auto;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  font-size: 1rem;
+}
 
     button {
       background-color: #7b2cbf;
