تحديث الواجهة أو إضافة صفحة index

--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,7 @@ input[type="file"] {
   border: none;
   border-radius: 5px;
   font-size: 1rem;
+  align-items: center;
 }
 
     button {
@@ -139,11 +140,11 @@ input[type="file"] {
       <h2>ادخل الرابط أو قم برفع الملف الذي ترغب في فحصه</h2>
       <form id="scan-form" enctype="multipart/form-data">
         <div class="input-group">
-          <label for="url">أدخل الرابط:</label>
+          <label for="url">أدخل الرابط</label>
           <input type="text" id="url" placeholder="أدخل الرابط هنا" />
         </div>
         <div class="input-group">
-          <label for="file-upload">أو قم بتحميل الملف:</label>
+          <label for="file-upload">أو قم بتحميل الملف</label>
           <input type="file" id="file-upload" />
         </div>
         <button type="submit">
