تحديث الواجهة أو إضافة صفحة index

--- a/public/index.html
+++ b/public/index.html
@@ -50,11 +50,12 @@
   border: none;
   border-radius: 5px;
   font-size: 1rem;
+  align-items: center;
 }
 
 input[type="file"] {
   display: block;
-  margin: 0 auto;
+  margin: 10 auto;
   padding: 10px;
   border: none;
   border-radius: 5px;
